<resources>
    <string name="app_name">电梯模拟器</string>
    <string name="action_settings">设置</string>
    <string name="current_floor">当前位置</string>
    <string name="invalid_floor">-</string>
    <string name="title_activity_settings">设置</string>

    <!-- Preference Titles -->
    <string name="connection_header">连接</string>
    <string name="sync_header">Sync</string>

    <!-- Connection Preferences -->
    <string name="address_title">地址</string>
    <string name="mode_title">连接模式</string>
    <string name="local_TSAP_title">本地 TSAP</string>
    <string name="remote_TSAP_title">远程 TSAP</string>
    <string name="rack_title">Rack</string>
    <string name="slot_title">Slot</string>

    <string name="target_floor">目标位置</string>
</resources>
