<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/error_container"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/error_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center_horizontal"
            android:background="#fdeded"
            android:textAlignment="center"
            android:textColor="#787878"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:background="#d4ced0"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.gridlayout.widget.GridLayout
            android:paddingTop="16dp"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/current_floor"
                android:textAlignment="center"
                app:layout_columnWeight="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/floor_hint" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/target_floor"
                app:layout_columnWeight="1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/floor_hint" />
            <TextView
                android:id="@+id/current_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                app:layout_columnWeight="1"
                android:paddingBottom="16dp"
                android:text="@string/invalid_floor"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/show_floor"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/target_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                app:layout_columnWeight="1"
                android:paddingBottom="16dp"
                android:text="@string/invalid_floor"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/show_floor"
                android:textStyle="bold" />
        </androidx.gridlayout.widget.GridLayout>
        <View
            android:layout_width="match_parent"
            android:background="@drawable/divider_bottom"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp">
        <View
            android:layout_width="match_parent"
            android:background="@drawable/divider_top"
            android:layout_height="1dp"/>
        <LinearLayout
            android:background="@android:color/white"
            android:id="@+id/floors"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:textSize="@dimen/floor"
                app:layout_columnWeight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4"
                android:textSize="@dimen/floor"
                app:layout_columnWeight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:textSize="@dimen/floor"
                app:layout_columnWeight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="@dimen/floor"
                app:layout_columnWeight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="@dimen/floor"
                app:layout_columnWeight="1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
